syntax = "proto3";

message DeleteUserOptions {
  string id = 1;
}
